[b] 745 - Fix gradient looking weird on Safari
[#164289745] https://www.pivotaltracker.com/story/show/164289745

--- a/src/css/variables.sass
+++ b/src/css/variables.sass
@@ -87,7 +87,7 @@ $boulder-color: #767676
 $azalea-color: #F5CCCC
 $light-steel-blue: #454C59
 $silver-chalice: #AFAFAF
-$transparent-color: rgba(0, 0, 0, 0)
+$black0-color: rgba(255, 255, 255, 0)
 
 
 $san-francisco-text-family: "San Francisco Text", sans-serif
