--- a/src/js/components/landing-page/complaint-summaries/complaint-summary-card.sass
+++ b/src/js/components/landing-page/complaint-summaries/complaint-summary-card.sass
@@ -56,4 +56,4 @@
       left: 0
       right: 0
       bottom: 0
-      background-image: linear-gradient(to bottom, $transparent-color, white)
+      background: linear-gradient(to bottom, $black0-color, white)
